<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">UPCOMING ELECTIONS</string>
    <string name="saved_elections">SAVED ELECTIONS</string>
    <string name="find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="representatives_search">Representatives Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="use_my_location">USE MY LOCATION</string>
    <string name="location_permission_denied">Location permission is required to use this feature</string>
    <string name="my_representatives">My Representatives</string>
    <string name="state_header">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="ballot_image">Ballot image</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="follow_election">Follow Election</string>
    <string name="address_error">No address found</string>
</resources>
