<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/ballot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ballot_logo"
            android:contentDescription="@string/ballot_image"
            app:layout_constraintBottom_toTopOf="@+id/upcomingButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/upcomingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_elections"
            style="@style/ButtonStyle"
            app:layout_constraintBottom_toTopOf="@id/representativeButton" />

        <Button
            android:id="@+id/representativeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives"
            style="@style/ButtonStyle"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>