<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:background="@color/colorPrimaryDark"
            app:titleTextColor="@color/white"
            app:title="@{viewModel.voterInfo.election.name}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:title="Election Name"/>

        <TextView
            android:id="@+id/election_date"
            style="@style/SubHeadingStyle"
            android:layout_margin="@dimen/default_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:text="@{viewModel.voterInfo.election.electionDay.toString()}"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            android:text="@{@string/state_header}"
            style="@style/HeadingStyle"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date"
            tools:text="@string/state_header"/>

        <TextView
            android:id="@+id/state_locations"
            android:text="@string/voting_locations"
            style="@style/ClickTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            app:layout_constraintStart_toStartOf="@id/election_date"
            tools:text="@string/voting_locations" />

        <TextView
            android:id="@+id/state_ballot"
            android:text="@string/ballot_information"
            style="@style/ClickTextViewStyle"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            tools:text="@string/ballot_information"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:text="@string/correspondence_address"
            style="@style/HeadingStyle"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:layout_constraintStart_toStartOf="@id/election_date"
            tools:text="@string/correspondence_address" />

        <TextView
            android:id="@+id/address"
            style="@style/ListStyle"
            app:correspondenceAddress="@{viewModel.voterInfo.state}"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="@id/election_date"
            tools:text="Correspondence address"/>

        <Button
            android:id="@+id/followButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            app:buttonText="@{viewModel.follow}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/upcoming_elections"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>